kariyer sayfasinda duzeltmeler

--- a/app/views/home/kariyer.html.erb
+++ b/app/views/home/kariyer.html.erb
@@ -34,7 +34,7 @@
       <li>Yazılı, görsel ve internet medya kanallarını tanımak, iletişim kanalları hakkında bilgili olmak,</li>
       <li>İnternet’teki sosyal ağ ve araçları iyi tanımak, aktif olarak kullanmak.</li>
       </ul>
-      <p><strong>“OLSA NE GÜZEL OLUR” NİTELİKLER:</strong></p>
+      <p><strong>“OLSA NE GÜZEL OLUR” NİTELİKLER</strong></p>
       <ul>
       <li>Her zaman beklenenden fazlasını vermeye istekli, tuttuğunu koparan yapıda olmak,</li>
       <li>Türkiye’deki sivil toplum projeleri, aktivizm ve gönüllülük konularında ciddi değişiklik yapmak isteyen duyarlı ve tutkulu bir birey olmak,</li>
@@ -61,24 +61,24 @@
       <div id="job-yazilim-muhendisi" class="job">
         <a id="yazilim-muhendisi"></a>
         <h3>YAZILIM MÜHENDİSİ</h3>
-      <p>Türkiye’de ve ABD’de yeni kurulan bir start-up olan Benvarim.com ‘da web tabanlı sistem geliştirme konusunda tecrubeli, yeniliklere ve öğrenmeye açık, ürünün teknik kısmı kadar son kullanıcıya olan etkisini de düşünmeyi seven <strong>Yazılım Mühendisi</strong> ekip arkadaşı arıyoruz. &nbsp;Adaylar, hali hazırda başka bir işte çalışıyor ise işlerinden ayrılmalarını beklemiyoruz. Çalışma saatlerimiz esnek olup, ofis ortamında çalışmıyoruz.</p>
+      <p>Türkiye’de ve ABD’de yeni kurulan bir start-up olan Benvarim.com'da web tabanlı sistem geliştirme konusunda tecrübeli, yeniliklere ve öğrenmeye açık, ürünün teknik kısmı kadar son kullanıcıya olan etkisini de düşünmeyi seven <strong>Yazılım Mühendisi</strong> ekip arkadaşı arıyoruz. Adaylar, hali hazırda başka bir işte çalışıyor ise işlerinden ayrılmalarını beklemiyoruz. Çalışma saatlerimiz esnek olup, ofis ortamında çalışmıyoruz.</p>
       <p>BenVarım kurucuları, ekibe dahil olacak bayan veya erkek tüm adayların, yöneticilik becerisi, sosyal girişimcilik ve kariyer gelişimine önem verir ve kişisel gelişimlerini destekler. Yazılım ekibimizin önemli bir kısmı, ABD’nin Silikon Vadisi’nde yaşamaktadır. Ekibe dahil olacak adayın Silikon Vadisi’nde bağlantılar kurmasının ve Vadi’deki best-practice’leri öğrenmesinin önünü açmak için çabamız olacaktır.<span id="more-11"></span></p>
       <p><strong>BAŞVURU</strong></p>
       <p>Aranan niteliklere sahip adayların, <a href="mailto:kariyer@benvarim.com">kariyer@benvarim.com</a> adresine, adayın özgeçmişi ile beraber kısa bir tanıtım mektubu yazıp yollamaları gerekmektedir. (Lütfen tanıtım mektubunuzda, pozisyonun sizi heyecanlandıran kısmı ve sizi diğer adaylardan ayıran özelliğinizi açıklayınız.)</p>
       <p><strong>“OLMAZSA OLMAZ” NİTELİKLER</strong></p>
       <ul>
-      <li>Üniversitelerin ilgili bölümlerinde okuyan veya mezun olmak,</li>
-      <li>İyi düzeyde İngilizce bilmek,</li>
-      <li>PHP, .NET, PYTHON, RUBY, JAVASCRIPT gibi tercih edilen programlama dillerinden en az birini iyi derecede biliyor olmak,</li>
-      <li>Ruby-on-rails Tutorial’ı <a target="_blank" href="http://ruby.railstutorial.org/">http://ruby.railstutorial.org/</a> tamamlamış veya iki ay içinde tamamlayacak durumda olmak,</li>
-      <li>Git, Svn, Bitkeeper vb. bir kontrol yazılımını kullanmış olmak,</li>
+      <li>Üniversitelerin ilgili bölümlerinde okuyor veya mezun olmak,</li>
+      <li>İyi düzeyde ingilizce bilmek,</li>
+      <li>php, .NET, python, ruby, javascript gibi web programlamada çok tercih edilen dillerden en az birini iyi derecede biliyor olmak, (biz RoR kullanıyoruz)</li>
+      <li><a target="_blank" href="http://ruby.railstutorial.org/">Ruby-on-rails Tutorial</a>'ı bitirmiş olmak ya da takıma katıldıktan sonraki 2 aylık süreçte bitirmeye söz vermek,</li>
+      <li>Git, Svn, Bitkeeper vb. bir versiyon kontrol sistemini kullanmış olmak, (biz git kullanıyoruz)</li>
       <li>Üstlendiği sorumluluğu hakkıyla yapmak ve bilmediğini yapmayacak sorumluluğa sahip olmak,</li>
       <li>En az bir sosyal sorumluluk projesi, sivil toplum projesi veya öğrenci kulubü sosyal projesinde yönetici, gönüllü veya aktivist olarak görev almış olmak.</li>
       </ul>
-      <p><strong>&nbsp;“OLSA NE GÜZEL OLUR” NİTELİKLER:</strong></p>
+      <p><strong>“OLSA NE GÜZEL OLUR” NİTELİKLER</strong></p>
       <ul>
-      <li>Gereksiz mühendis yapmadan özenle kod yazmak ve yazdığı kodun sonradan geliştirilebilir hale getirme vizyonuna sahip olmak,</li>
-      <li>Dünya’dan, sektörden gelişmelere açık olmak, düzenli olarak iştahla Techcrunch, Hacker News vb. tarzı blogları takip etmek.</li>
+      <li>Kod yazarken gereksiz mühendislik yapmamak; ancak yazdıği kodun sonradan değişip gelişmeye uygun olmasına özen göstermek,</li>
+      <li>Dünya’dan, sektörden gelişmelere açık olmak, düzenli olarak iştahla Techcrunch, Hacker News vb. siteleri takip etmek,</li>
       <li>Türkiye’deki sivil toplum projeleri, aktivizm ve gönüllülük konularında ciddi değişiklik yapmak isteyen duyarlı ve tutkulu bir birey olmak,</li>
       <li>İş düzenini ve planını kendi yaratıp, yönetebilmek.</li>
       </ul>
@@ -111,7 +111,7 @@
       <li>Telefon ile ve yüzyüze konuşmaktan hoşlanan, karşısındakini memnun eden bir yapıya sahip olmak,</li>
       <li>Farklı kültür ve sosyo-ekonomik düzeydeki kurum yöneticileri ile gönüllülerine, internet’teki sosyal ağların ve teknolojilerin, kurumlara sağladığı faydaları anlatabilecek yetiye sahip olmak.</li>
       </ul>
-      <p><strong>“OLSA NE GÜZEL OLUR” NİTELİKLER:</strong></p>
+      <p><strong>“OLSA NE GÜZEL OLUR” NİTELİKLER</strong></p>
       <ul>
       <li>Türkiye’deki sivil toplum projeleri, aktivizm ve gönüllülük konularında ciddi değişiklik yapmak isteyen duyarlı ve tutkulu bir birey olmak,</li>
       <li>İş düzenini ve planını kendi yaratıp, yönetebilmek,</li>
