--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1642,6 +1642,9 @@ blockquote span.quotation{
         font-style: italic;
         margin-bottom: 10px;
     }
+    .more-link {
+        cursor: pointer;
+    }
     .widget-aktif-bagis p {
         margin-bottom: 5px;
     }
