Email fully functional. Little bit costly. Cron needs to be modified.

--- a/app/views/user_mailer/dailymail.html.erb
+++ b/app/views/user_mailer/dailymail.html.erb
@@ -15,9 +15,9 @@ Gün içerisinde <%=@page.title%> isimli sayfanıza yapılmış olan bağışlar
 <% toplam = 0 %>
 <% @payments.each do |payment| %>
 
-İsim   : <%=payment.name%=><br/>
-Not    : <%=payment.note%=><br/>
-Miktar : <%=payment.amount%=><br/><br/>
+İsim   : <%=payment.name%><br/>
+Not    : <%=payment.note%><br/>
+Miktar : <%=payment.amount%><br/><br/>
 
 <% toplam += payment.amount %>
 <% end %>
