--- a/app/views/user_mailer/dailymail.text.erb
+++ b/app/views/user_mailer/dailymail.text.erb
@@ -5,9 +5,9 @@ Gün içerisinde <%=@page.title%> isimli sayfanıza yapılmış olan bağışlar
 <% toplam = 0 %>
 <% @payments.each do |payment| %>
 
-İsim   : <%=payment.name%=>
-Not    : <%=payment.note%=>
-Miktar : <%=payment.amount%=>
+İsim   : <%=payment.name%>
+Not    : <%=payment.note%>
+Miktar : <%=payment.amount%>
 
 <% toplam += payment.amount %>
 <% end %>
