--- a/app/views/home/kariyer.html.erb
+++ b/app/views/home/kariyer.html.erb
@@ -10,17 +10,18 @@
 
       <h4>Açık Pozisyonlar:</h4>
       <ul>
-        <li><a href="#pazarlama-satis-direktoru">Pazarlama ve İletişim Direktörü</a></li>
+        <li><a href="#pazarlama-satis-direktoru">Pazarlama ve Satış Koordinatörü</a></li>
         <li><a href="#yazilim-muhendisi">Yazılım Mühendisi</a></li>
-        <li><a href="#kurumsal-iletisim-koordinatoru">Kurumsal İletişim Koordinatörü</a></li>
+        <li><a href="#kurumsal-iletisim-koordinatoru">Halkla İlişkiler Koordinatörü</a></li>
       </ul>
 
       <br/><br/>
 
+      <hr/>
       <div id="job-kurumsal-iletisim-koordinatoru" class="job">
         <a id="kurumsal-iletisim-koordinatoru"></a>
-        <h3>KURUMSAL İLETİŞİM KOORDİNATÖRÜ</h3>
-      <p>Benvarim.com ‘un geniş kitlelere tanıtılmasında ve Türkiye’de internet üzerinden sosyal yardım ile bağışçılığın geliştirilmesinde önemli bir rol oynayacak, fikir dolu ve heyecanlı bir <strong>Kurumsal İletişim Koordinatörü</strong> arıyoruz. &nbsp;Adaylar, hali hazırda başka bir işte çalışıyor olabilir, işlerinden ayrılmaları beklenmez. Çalışma saatlerimiz esnek olup, ofis ortamında çalışma beklenmez.</p>
+        <h3>HALKLA İLİŞKİLER KOORDİNATÖRÜ</h3>
+      <p>Benvarim.com ‘un geniş kitlelere tanıtılmasında ve Türkiye’de internet üzerinden sosyal yardım ile bağışçılığın geliştirilmesinde önemli bir rol oynayacak, fikir dolu ve heyecanlı bir <strong>Halkla İlişkiler Koordinatörü</strong> arıyoruz. &nbsp;Adaylar, hali hazırda başka bir işte çalışıyor olabilir, işlerinden ayrılmaları beklenmez. Çalışma saatlerimiz esnek olup, ofis ortamında çalışma beklenmez.</p>
       <p>BenVarım kurucuları, ekibe dahil olacak bayan veya erkek tüm adayların, yöneticilik becerisi, sosyal girişimcilik ve kariyer gelişimine önem verir ve kişisel gelişimi destekler.<span id="more-5"></span></p>
       <p><strong>BAŞVURU</strong></p>
       <p>Aranan niteliklere sahip adayların, <a href="mailto:kariyer@benvarim.com">kariyer@benvarim.com</a> adresine, adayın özgeçmişi ile beraber kısa bir tanıtım mektubu yazıp yollamaları gerekmektedir. (Lütfen tanıtım mektubunuzda, pozisyonun sizi heyecanlandıran kısmı ve sizi diğer adaylardan ayıran özelliğinizi açıklayınız.)</p>
@@ -57,7 +58,7 @@
       </div>
 
       <br/><br/>
-
+      <hr/>
       <div id="job-yazilim-muhendisi" class="job">
         <a id="yazilim-muhendisi"></a>
         <h3>YAZILIM MÜHENDİSİ</h3>
@@ -92,7 +93,7 @@
       </div>
 
       <br/><br/>
-
+      <hr/>
       <div id="job-pazarlama-satis-direktoru" class="job">
         <a id="pazarlama-satis-direktoru"></a>
       	<h3>PAZARLAMA VE SATIŞ KOORDİNATÖRÜ</h3>
