--- a/app/views/user_mailer/dailymail.html.erb
+++ b/app/views/user_mailer/dailymail.html.erb
@@ -10,20 +10,27 @@
 
 Merhaba <%=@page.user.name%>,<br/><br/>
 
-Gün içerisinde <%=@page.title%> isimli sayfanıza yapılmış olan bağışları aşağıda görebilirsiniz. <br/><br/>
+Gün içerisinde <a href="<%=page_path(@page, :only_path => false)%>"><%=@page.title%></a> isimli sayfanıza yapılmış olan bağışları aşağıda görebilirsiniz. <br/><br/>
 
 <% toplam = 0 %>
 <% @payments.each do |payment| %>
 
 İsim   : <%=payment.name%><br/>
 Not    : <%=payment.note%><br/>
-Miktar : <%=payment.amount%><br/><br/>
+Miktar : <%=payment.amount%> TL<br/><br/>
 
 <% toplam += payment.amount %>
 <% end %>
 <br/><br/>
 
-Toplam: <%= toplam %>
+Toplam: <%= toplam %> TL<br/>
+Bu güne kadar yapılan toplan bağış: <%=@page.collected%> TL<br/>
+
+<ul>
+  <li>Twitter: <a href="http://twitter.com/#!/Ben_Varim">@BenVarim</a></li>
+  <li>Facebook: <a href="http://www.facebook.com/BenVarim.Platformu">Ben Varım Facebok</a></li>
+  <li>Email: <a href="mailto:iletisim@benvarim.com">iletisim@benvarim.com</a></li>
+</ul>
 
 </body>
 </html>
