--- a/app/views/user_mailer/dailymail.html.erb
+++ b/app/views/user_mailer/dailymail.html.erb
@@ -24,7 +24,7 @@ Miktar : <%=payment.amount%> TL<br/><br/>
 <br/><br/>
 
 Toplam: <%= toplam %> TL<br/>
-Bu güne kadar yapılan toplan bağış: <%=@page.collected%> TL<br/>
+Bu güne kadar yapılan toplam bağış: <%=@page.collected%> TL<br/>
 
 <ul>
   <li>Twitter: <a href="http://twitter.com/#!/Ben_Varim">@BenVarim</a></li>
