--- a/app/views/user_mailer/dailymail.text.erb
+++ b/app/views/user_mailer/dailymail.text.erb
@@ -13,7 +13,7 @@ Miktar : <%=payment.amount%> TL
 <% end %>
 
 Toplam: <%= toplam %> TL
-Bu güne kadar yapılan toplan bağış: <%=@page.collected%> TL
+Bu güne kadar yapılan toplam bağış: <%=@page.collected%> TL
 
 
 Twitter: http://twitter.com/#!/Ben_Varim
