--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,16 @@
       <%=render :partial => 'layouts/errors'%>
 -->
 
+
+
+<a class="fb-button" href="https://www.facebook.com/dialog/oauth?client_id=138566025676&amp;scope=email,user_birthday,user_likes,user_education_history,user_hometown,user_interests,user_activities,user_location&amp;redirect_uri=https://www.airbnb.com/authenticate" data-redirect_uri="https://www.airbnb.com/authenticate">
+	<span class="fb-button-left"></span>
+	<span class="fb-button-center"><strong>Connect</strong> with <strong>Facebook</strong></span>
+	<span class="fb-button-right"></span>
+</a>
+
+
+
       <% if resource.errors.any? %>
         <div class="msg msg-error" id="error_explanation">
           <h2>Lütfen aşagıdaki hataları düzeltiniz.</h2>
@@ -25,6 +35,7 @@
           </ul>
         </div>
       <% end %>
+  
 
 
 
