--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -1,6 +1,6 @@
 <div class="form-links">
   <%- if controller_name != 'sessions' %>
-    <%= link_to "Daha önce kayıt yaptıysanız, lütfen giriş yapınız.", new_session_path(resource_name) %>
+    <%= link_to "Daha önce kayıt olduysanız, lütfen giriş yapınız.", new_session_path(resource_name) %>
   <% end -%>
   <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
     <%= link_to "Yeni Kayıt Oluştur", new_user_registration_path %>
