implements registration page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="one-column">
 
-  <h1>BenVarım'a kayıt olmak çok kolay!</h1>
+  <h1>BenVarım'a kaydolmak çok kolay!</h1>
 
   <div class="widget widget-light" id="w-yeni-kayit">
     <div class="w-inner">
@@ -8,7 +8,7 @@
       <div class="signup-options" id="signup-with-fb">
         <div class="line">
           <div class="size1of2">
-            bla
+            <img src="/stylesheets/images/facepile.png" />
             <div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=116309391796241&amp;xfbml=1"></script><fb:signup-button show-faces="true" width="300" max-rows="2"></fb:signup-button>
           </div>
           <div class="size1of2 lastUnit">
@@ -25,7 +25,7 @@
 
       <div class="signup-options" id="signup-with-email">
         <div class="signup-toggle toggle">
-          <p>Benvarim.com'a isterseniz <a href="#">email ile kayıt olabilirsiniz</a>.</p>
+          <p>BenVarım'a isterseniz <a href="#">email ile  kaydolabilirsiniz</a>.</p>
         </div>
         <div class="signup-form">
           <% if resource.errors.any? %>
