implements login page and fixes registration page bugs

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
           <div class="size1of2 lastUnit">
             <a class="fb-button" href="#" data-redirect_uri="https://benvarim.com/authenticate">
             	<span class="fb-button-left"></span>
-            	<span class="fb-button-center"><strong>Facebook</strong> ile <strong>Bağlan</strong></span>
+            	<span class="fb-button-center"><strong>Facebook</strong> ile <strong>Kaydol</strong></span>
             	<span class="fb-button-right"></span>
             </a>
           </div>
@@ -25,7 +25,7 @@
 
       <div class="signup-options" id="signup-with-email">
         <div class="signup-toggle toggle">
-          <p>BenVarım'a isterseniz <a href="#">email ile  kaydolabilirsiniz</a>.</p>
+          <p>BenVarım'a isterseniz <a href="#">email ile  giriş yapabilirsiniz</a>.</p>
         </div>
         <div class="signup-form">
           <% if resource.errors.any? %>
@@ -61,7 +61,7 @@
             </div>
 
             <div class="actions">
-              <%= f.submit "Kayıt Ol", :class=>"button super yellow button-primary" %>
+              <%= f.submit "Kayıt Ol", :class=>"button large yellow button-primary" %>
             </div>
           <% end %>
         </div><!-- signup-form -->
