--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -3,7 +3,7 @@
     <%= link_to "Daha önce kayıt olduysanız, lütfen giriş yapınız.", new_session_path(resource_name) %>
   <% end -%>
   <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to "Yeni Kayıt Oluştur", new_user_registration_path %>
+    <%= link_to "Daha önce kayıt olmadıysan, hemen ücretsiz kayıt ol!", new_user_registration_path %>
   <% end -%>
 
 </div>
