--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,6 +12,7 @@
   <%=link_to "Kullanım Şartları", :kullanim_sartlari %> |
   <%=link_to "Güvenli Ödeme", :guvenli_odeme %> |
   <%=link_to "Kariyer", :kariyer %> |
+  <%=link_to "Sık Sorulan Sorular", :sik_sorulan_sorular %> |
   <%=link_to "Hakkımızda", :hakkimizda %> |
   <%=link_to "İletişim", :new_contact_form %>
 </div>
