--- a/app/views/layouts/_sidebar.erb
+++ b/app/views/layouts/_sidebar.erb
@@ -11,7 +11,7 @@
 
   <div id="w-newsletter" class="widget widget-dark">
     <div class="w-inner">
-      <div class="w-title">Haber bültenine kaydolun</div>
+      <div class="w-title">BenVarım Haber Bülteni'ne kaydolun</div>
       <!-- Begin MailChimp Signup Form -->
       <script type="text/javascript">
       // delete this script tag and use a "div.mce_inline_error{ XXX !important}" selector
