implements faq + about

--- a/app/views/home/hakkimizda.html.erb
+++ b/app/views/home/hakkimizda.html.erb
@@ -10,6 +10,36 @@
       <p>Lütfen bizi Twitter (<a href="http://twitter.com/Ben_Varim" target="_blank">@Ben_Varim</a>) ve <a href="http://www.facebook.com/pages/Ben-Varim/135114429880530" target="_blank">Facebook</a>’ta takip edin.
       <p>Soru ve önerileriniz için <a href="/iletisim/yeni">iletişim</a> formumuzu kullanabilirsiniz.</p>
 
+
+
+
+
+
+
+      <div class="profile-details clearfix hidden">
+        <div class="profile_pic clearfix">
+          <div class="_pm_container">
+            <div class="_pm_shadow r"></div>
+            <div class="_pm_shadow l"></div>
+            <div class="_pm">
+              <div class="_pm_inner">
+                <img alt="Gerçek Karakuş" class="alt-img" src="/images/about/gercek-karakus.jpeg" width="223" />
+                <div class="img_inner_shadow"></div>
+                <h3>Gerçek Karakuş</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="profile-details">
+        </div>
+      </div>
+
+
+
+
+
+
       </div>
     </div>
 </div><!-- end of #main-content -->
