--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,7 @@
       <div class="signup-options" id="signup-with-fb">
         <div class="line">
           <div class="size1of2">
+            <!-- TODO(yigit): Replace the image below with facepile on production -->
             <img src="/stylesheets/images/facepile.png" />
             <div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=116309391796241&amp;xfbml=1"></script><fb:signup-button show-faces="true" width="300" max-rows="2"></fb:signup-button>
           </div>
