--- a/app/views/home/sik_sorulan_sorular.erb
+++ b/app/views/home/sik_sorulan_sorular.erb
@@ -10,7 +10,7 @@
       		<li><a href="#tabs-2">Kurumlarla İlgili Sorular</a></li>
       		<li><a href="#tabs-3">Gönüllülerle İlgili Sorular</a></li>
       	</ul>
-      	<div id="tabs-1">
+      	<div id="tabs-1" class="accordion">
 
           <h3>Kimler Benvarim.com’u kullanabilir?</h3>
           <p>Türkiye Cumhuriyeti’nde yasal olarak kurulan tüm dernekler ve vakıflar BenVarım platformunu kullanarak sosyal sorumluluk projelerini tanıtabilir ve bunlar için bağış toplayabilir.</p>
@@ -51,7 +51,7 @@
 
 
 
-      	<div id="tabs-2">
+      	<div id="tabs-2" class="accordion">
           <h3>Benvarim.com’u neden kullanayım?</h3>
           <p>Neden kullanmayasınız? Benvarim.com, Türkiye’nin ilk çevrimiçi bağış toplama (online fundraising) servisidir. Türkiye’deki tüm sivil toplum kuruluşları (vakıf ile dernekler), sosyal ağları kullanarak projelerini tanıtabilir, gönüllüler aracılığı ile daha fazla bağış toplayabilirler.</p>
 
@@ -66,18 +66,19 @@
           <p>Hayır. Benvarım platformu kurumunuz adınıza işlem yapan bir banka, aracı kurum, temsilci veya tüzel kişilik değildir. Benvarım platformunun işleyiş modeli, Türkiye Cumhuriyeti Vakıflar Mevzuatı, Dernekler Mevzuatı, 2680 sayılı Yardım Toplama Kanunu ve Bilişim Mevzuatına uygun olarak hazırlanmıştır. Kurucular, konuyla ilgili hukuksal hazırlıklarını yapmışlardır. Daha detaylı bilgi için <a href="mailto:iletisim@benvarim.com">iletisim@benvarim.com</a> adresinden eposta yoluyla bize ulaşabilirsiniz. Sizi yönlendirmekten memnuniyet duyarız.</p>
 
           <h3>Kurum’u kayıt ettikten sonra entegrasyon sürecinde nelerle karşılaşacağım?</h3>
-          <p>Kurum bilgilerinizi BenVarım’a kayıt ettikten sonra, sizinle irtibata geçecek ve aşağıdaki bilgileri iletisim@benvarim.com adresine yollamanızı rica edeceğiz.</p>
-          <ul>
-          <li>Kurumun bilgilerinin doğruluğuyla ilgili bilgiler (Vakıflar için Vakıf Kuruluş Belgesi, Dernekler için en son Genel Kurul Sonuç Bildirimi)</li>
-
-          <li>Kurumunuza yapılacak bağışların toplanacağı banka hesaplarına dair bilgiler. Birden fazla banka hesabı belirtebilirsiniz. (Banka Adı, Banke Hesap Sahibinin İsmi, Hesabın IBAN numarası)</li>
-          <li>Kurumunuzda Benvarim.com yetkilileriyle iletişim halinde olacak ve raporlama bilgilerini alacak kişinin iletişim bilgileri (İsim, soyad, telefon numarası, email adresi, adres, kurumdaki görevi, doğum tarihi)</li>
-          </ul>
-          <p>Bu bilgilerin ardından, kurumunuz geçici olarak aktif hale geçecektir. Ardından sizden aşağıdaki bilgileri almamızla beraber hesabınız sürekli olarak aktif olacaktır.</p>
-          <ul>
-          <li>Kurumunuzun yetkili organı tarafından Benvarim.com ‘un kullanılmasına dair alınan kararın ibrazı</li>
-          <li>Benvarim.com ile kurum arasında sözleşme imzalanması</li>
-          </ul>
+          <div class="accordion-content">
+            <p>Kurum bilgilerinizi BenVarım’a kayıt ettikten sonra, sizinle irtibata geçecek ve aşağıdaki bilgileri iletisim@benvarim.com adresine yollamanızı rica edeceğiz.</p>
+            <ul>
+            <li>Kurumun bilgilerinin doğruluğuyla ilgili bilgiler (Vakıflar için Vakıf Kuruluş Belgesi, Dernekler için en son Genel Kurul Sonuç Bildirimi)</li>
+            <li>Kurumunuza yapılacak bağışların toplanacağı banka hesaplarına dair bilgiler. Birden fazla banka hesabı belirtebilirsiniz. (Banka Adı, Banke Hesap Sahibinin İsmi, Hesabın IBAN numarası)</li>
+            <li>Kurumunuzda Benvarim.com yetkilileriyle iletişim halinde olacak ve raporlama bilgilerini alacak kişinin iletişim bilgileri (İsim, soyad, telefon numarası, email adresi, adres, kurumdaki görevi, doğum tarihi)</li>
+            </ul>
+            <p>Bu bilgilerin ardından, kurumunuz geçici olarak aktif hale geçecektir. Ardından sizden aşağıdaki bilgileri almamızla beraber hesabınız sürekli olarak aktif olacaktır.</p>
+            <ul>
+            <li>Kurumunuzun yetkili organı tarafından Benvarim.com ‘un kullanılmasına dair alınan kararın ibrazı</li>
+            <li>Benvarim.com ile kurum arasında sözleşme imzalanması</li>
+            </ul>
+          </div>
 
 
           <h3>Dernek veya Vakıf olmayan kurum/kişilere bağış yapılabiliyor mu? Mesela birisi maddi durumu kötü bir tanıdığı için kampanya başlatabilir mi?</h3>
@@ -93,7 +94,7 @@
           <h3>Neden kurumların kaydı için belge istiyorsunuz?</h3>
           <p>Türkiye’deki yasal mevzuat zaten bizi bu konuda dikkatli olmamız için zorluyor. Benvarim.com’u kullanacak tüm kurumlardan, tüzel kişiliklerini, projelerini ve banka hesap numaralarını kanıtlayacak belgeleri talep ediyoruz. Bu dikkatimiz, hem yasalara uymamız gereğinden, hem de bağışçı ile kurumları korumak gibi bir görevimiz olmasından kaynaklanıyor.</p>
 
-          <a title="View BenVarım Platformu - Kurumsal Tanıtım Sunumu on Scribd" href="http://www.scribd.com/doc/62793373/BenVar%C4%B1m-Platformu-Kurumsal-Tan%C4%B1t%C4%B1m-Sunumu" style="margin: 12px auto 6px auto; font-family: Helvetica,Arial,Sans-serif; font-style: normal; font-variant: normal; font-weight: normal; font-size: 14px; line-height: normal; font-size-adjust: none; font-stretch: normal; -x-system-font: none; display: block; text-decoration: underline;">BenVarım Platformu - Kurumsal Tanıtım Sunumu</a><object id="doc_43675" name="doc_43675" height="600" width="100%" type="application/x-shockwave-flash" data="http://d1.scribdassets.com/ScribdViewer.swf" style="outline:none;"><param name="movie" value="http://d1.scribdassets.com/ScribdViewer.swf"><param name="wmode" value="opaque"><param name="bgcolor" value="#ffffff"><param name="allowFullScreen" value="true"><param name="allowScriptAccess" value="always"><param name="FlashVars" value="document_id=62793373&access_key=key-2nzl0sji4leal9j9zg3r&page=1&viewMode=slideshow"><embed id="doc_43675" name="doc_43675" src="http://d1.scribdassets.com/ScribdViewer.swf?document_id=62793373&access_key=key-2nzl0sji4leal9j9zg3r&page=1&viewMode=slideshow" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" height="600" width="100%" wmode="opaque" bgcolor="#ffffff"></embed></object>
+          <a title="View BenVarım Platformu - Kurumsal Tanıtım Sunumu on Scribd" href="http://www.scribd.com/doc/62796024/BenVar%C4%B1m-Platformu-Kurumsal-Tan%C4%B1t%C4%B1m-Sunumu" style="margin: 12px auto 6px auto; font-family: Helvetica,Arial,Sans-serif; font-style: normal; font-variant: normal; font-weight: normal; font-size: 14px; line-height: normal; font-size-adjust: none; font-stretch: normal; -x-system-font: none; display: block; text-decoration: underline;">BenVarım Platformu - Kurumsal Tanıtım Sunumu</a><iframe class="scribd_iframe_embed" src="http://www.scribd.com/embeds/62796024/content?start_page=1&view_mode=slideshow&access_key=key-25d01dvpq73snhv947lr" data-auto-height="true" data-aspect-ratio="1.2938689217759" scrolling="no" id="doc_21769" width="100%" height="600" frameborder="0"></iframe><script type="text/javascript">(function() { var scribd = document.createElement("script"); scribd.type = "text/javascript"; scribd.async = true; scribd.src = "http://www.scribd.com/javascripts/embed_code/inject.js"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(scribd, s); })();</script>
 
 
 
@@ -105,7 +106,7 @@
 
 
 
-      	<div id="tabs-3">
+      	<div id="tabs-3" class="accordion">
           <h3>Bir gönüllü olarak BenVarım’ın bana sağlayacağı fayda nedir?</h3>
           <p>Hayatınızdaki her faaliyette akraba ve arkadaşlarınızın size destek olacağını biliyorsunuz. Bu manevi faydayı, topluma yararlı bir faydaya dönüştürmek sizin elinizde. Eğer koşu, bisiklet, yüzme veya herhangibir spor müsabakasına katılıyorsanız, yeni sergi açtıysanız, evleniyorsanız, çocuğunuz olduysa veya birinin yasını tutuyorsanız, doğumgünü ve yılbaşı kutlamalarını yapıyorsanız, tek yapmanız gereken BenVarım’da bir bağış sayfası yaratmak ve arkadaşlarınızdan sizin tercih ettiğiniz kuruma bağış yapmalarını istemek.</p>
 
