--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
             <div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=116309391796241&amp;xfbml=1"></script><fb:signup-button show-faces="true" width="300" max-rows="2"></fb:signup-button>
           </div>
           <div class="size1of2 lastUnit">
-            <a class="fb-button" href="#" data-redirect_uri="https://benvarim.com/authenticate">
+            <a class="fb-button" href="<%=user_omniauth_authorize_path(:facebook)%>" data-redirect_uri="https://benvarim.com/authenticate">
             	<span class="fb-button-left"></span>
             	<span class="fb-button-center"><strong>Facebook</strong> ile <strong>Kaydol</strong></span>
             	<span class="fb-button-right"></span>
