adds unicef to the homepage and some copy changes

--- a/app/views/projects/_list_projects.html.erb
+++ b/app/views/projects/_list_projects.html.erb
@@ -1,7 +1,7 @@
 <div class="widget widget-light widget-kurum ">
   <div class="w-inner clearfix">
     <div class="w-content">
-      <div class="w-title">Bağış Projeleri</div>
+      <div class="w-title">Destekleyebileceğiniz Projeler</div>
       <div class="rows-container" id="donation-pages-container">
         <%
         org_ids = []
