--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,3 @@
-
-
-
-
-
 <div id="footer">
 <div class="container">
 <div id="footer-logo">benvarim.com</div>
@@ -20,6 +15,16 @@
 </div>
 </div> <!--! end of #footer -->
 
+<script>
+//export JS configuration
+Bv = {};
+Bv.Config = {
+  Search : {
+    publicApiUrl : "<%=ENV['INDEXTANK_PUBLIC_URL']%>",
+    indexName : "<%=BvSearch.get_default_index_name%>"
+  }
+};
+</script>
 
 <!-- Share part -->
 <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
