uber dummy, hacky search page

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,6 +1,8 @@
 <form id="search_form">
   <input type="text" name="k" id="search_query">
 </form>
+<div id="search_renderer">
+  </div>
 <% if @results %>
 <%=debug @results%>
 
