kertenkele ve dunyanin en cirkin menusu

--- a/app/views/admin/impersonate.html.erb
+++ b/app/views/admin/impersonate.html.erb
@@ -1,3 +1,4 @@
+<%=render 'menu'%>
 <%=render :partial => 'layouts/errors'%>
 <div id="main-content">
   <div class="widget widget-light" id="w-iletisim">
