--- a/app/views/admin/organizations.html.erb
+++ b/app/views/admin/organizations.html.erb
@@ -1,3 +1,4 @@
+<%=render 'menu'%>
 <%=render :partial => 'layouts/errors'%>
 <div class="widget-light widget-kurum">
   <div class="w-inner clearfix">
