--- a/app/views/admin/organizations.html.erb
+++ b/app/views/admin/organizations.html.erb
@@ -18,7 +18,7 @@
                     <%=submit_tag "Değişikliği kaydet"%>
                   <% end%>
                 <% else %>
-                  <a href="javascript:alert('insallah bir gun :);return false;')">Paypal Bilgilerini Gir</a>
+                  <a href="javascript:alert('insallah bir gun :)');return false;">Paypal Bilgilerini Gir</a>
                 <% end %>
 
               </p>
